iter_language/tests/corpus/valid/runner-implicit-single-alias.iter
workspace local as dev {
  base = "."
}

agent noop as primary {}

runner {
  continue_on_error = false
  behavior = loop
  prompt = "Implicit aliased binding."
}
