iter_language/tests/corpus/invalid/runner-implicit-workspace-missing.iter
agent noop {}

runner {
  agent = noop
  continue_on_error = false
  behavior = loop
  prompt = "Missing workspace."
}
